fixed header spacing

--- a/css/foodSlideShow.css
+++ b/css/foodSlideShow.css
@@ -1,5 +1,5 @@
 .foodSlideShow img {
-    width: 100vw;
+    width: 100%;
     height: 60vh;
     object-fit: cover;
 }
