--- a/css/header.css
+++ b/css/header.css
@@ -41,6 +41,10 @@ header {
     "wdth" 100;
 }
 
+/* header .logo {
+    margin-left: 24px;  // Space Beetween Wall 
+} */
+
 header .logo img{
     height: 40px;
 }
@@ -71,7 +75,7 @@ header .navigation .socials {
     align-items: center;
     justify-content: center;
     gap: 4px;
-    margin-right: 10px;
+    margin-right: 24px; /* Space Beetween Wall */
 }
 
 header .navigation .socials img {
